# gopi5go_desk

./: .gitignore  README.md
maps/: tb3_house_part.pgm  tb3_house_part.yaml  tb3world.yaml
ros2ws/: README.md  check_battery.sh  clean.sh  create_node_in_pkg.sh  frames_2024-11-10_20.05.01.gv  gopi5go_dave.frames.gv  rebuild.sh  ss.sh
ros2ws/cmds/: call_dock.sh  call_odom_reset_srv.sh  call_say_svc.sh  call_start_scan.sh  call_stop_scan.sh  call_undock.sh  confirm_nav2_params_file_in_use.sh  echo_battery_state.sh  echo_cmd_vel_topics.sh  echo_distance_topic.sh  echo_dock_status.sh  echo_encoder_topics.sh  echo_imu_topics.sh  echo_joy_topic.sh  echo_lidar_topic.sh  echo_map_topic.sh  echo_motor_status_topic.sh  echo_mpu9250_imu_topics.sh  echo_pose.sh  echo_ultrasonic_topic.sh  list_active_topics.sh  list_services.sh  list_topics_with_type.sh  pub_center_servo.sh  pub_goal_0.1_0.sh  pub_goal_1_0.sh  pub_goal_start_pose.sh  pub_servo_right_45.sh  run_rviz_for_nav.sh  run_teleop_gopigo3_keyboard.sh  save_map.sh  show_distance_sensor_node_info.sh  show_gopigo3_node_info.sh  show_imu_node_info.sh  show_lidar_node_info.sh  show_ultrasonic_ranger_node_info.sh  start_demo_listener.sh  (+10 more)
simws/: README.md  clean.sh  gopigo3_waffle_frames.gv  rebuild.sh  ss.sh
simws/install/gpg3_msgs/share/gpg3_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simws/install/gpg3_msgs/share/gpg3_msgs/action/: Patrol.idl
simws/install/gpg3_msgs/share/gpg3_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gpg3_msgs__rosidl_generator_cExport-noconfig.cmake  export_gpg3_msgs__rosidl_generator_cExport.cmake  export_gpg3_msgs__rosidl_generator_cppExport.cmake  export_gpg3_msgs__rosidl_generator_pyExport-noconfig.cmake  export_gpg3_msgs__rosidl_generator_pyExport.cmake  export_gpg3_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_gpg3_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_gpg3_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_gpg3_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  gpg3_msgsConfig.cmake  gpg3_msgs__rosidl_typesupport_cExport-noconfig.cmake  gpg3_msgs__rosidl_typesupport_cExport.cmake  gpg3_msgs__rosidl_typesupport_cppExport-noconfig.cmake  gpg3_msgs__rosidl_typesupport_cppExport.cmake  gpg3_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  gpg3_msgs__rosidl_typesupport_introspection_cExport.cmake  gpg3_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  gpg3_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
simws/install/gpg3_msgs/share/gpg3_msgs/msg/: SensorState.idl  Sound.idl  VersionInfo.idl
simws/install/gpg3_msgs/share/gpg3_msgs/srv/: Dqn.idl  Sound.idl
simws/install/gpg3_simulations/share/gpg3_simulations/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simws/install/gpg3_simulations/share/gpg3_simulations/cmake/: gpg3_simulationsConfig.cmake
simws/src/gpg3_fake_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
simws/src/gpg3_fake_node/include/gpg3_fake_node/: gpg3_fake_node.hpp
simws/src/gpg3_fake_node/launch/: rviz2.launch.py
simws/src/gpg3_fake_node/param/: gopigo3.yaml
simws/src/gpg3_fake_node/src/: gpg3_fake_node.cpp
(+355 files in other folders)
