<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpg3_fake_node</name>
  <version>2.2.6</version>
  <description>
    Package for gpg3 fake node. With this package, simple tests can be done without a robot.
    You can do simple tests using this package on rviz without real robots.
  </description>
  <maintainer email="slowrunner@noreply.com">slowrunner</maintainer>
  <license>Apache 2.0</license>
  <author email="slowrunner@noreply.com">slowrunner</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <depend>ament_cmake</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>gpg3_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
