<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpg3_simulations</name>
  <version>2.2.6</version>
  <description>
    ROS 2 packages for GoPiGo3 (GPG3) simulations
  </description>
  <maintainer email="slowrunner@noreply.com">slowrunner</maintainer>
  <license>Apache 2.0</license>
  <author email="slowrunner@noreply.com">slowrunner</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author>Ryan Shim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gpg3_fake_node</exec_depend>
  <exec_depend>gpg3_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
